<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel" type="air.com.marsroverexplorer.ui.roverdetail.photo.PhotoViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

        <ImageView
                android:contentDescription="@string/back"
                android:onClick="@{viewModel::onClickBack}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_close_black_24dp"
                android:id="@+id/imageView" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"/>
        <ImageButton
                android:contentDescription="@string/share"
                android:onClick="@{viewModel::onClickShare}"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_share_black_24dp"
                android:id="@+id/imageView2" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"/>
        <ImageButton
                android:background="@null"
                android:contentDescription="@string/download_photo"
                android:onClick="@{viewModel::onClickDownload}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_file_download_black_24dp"
                android:id="@+id/imageView3"
                app:layout_constraintEnd_toStartOf="@+id/imageView2" android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"/>
        <androidx.viewpager.widget.ViewPager
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
                android:id="@+id/viewPagerPhotos"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>