<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>

        <variable name="viewmodel" type="air.com.marsroverexplorer.ui.roverdetail.datepicker.DatePickerViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

        <ImageView
                style="@style/Widget.AppCompat.ActionButton"
                android:onClick="@{viewmodel::close}"
                android:contentDescription="@string/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp"
                android:id="@+id/imageView"
                app:srcCompat="@drawable/ic_close_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <RadioGroup
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                android:layout_marginTop="16dp"
                android:background="@drawable/red_out_line"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/radioGroup">

            <RadioButton
                    android:checked="true"
                    android:onClick="@{viewmodel::changePicker}"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginStart="1dp"
                    android:id="@+id/earth"
                    android:background="@drawable/toggle_widget_background"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/earth_date"
                    android:textColor="@android:color/white"/>

            <RadioButton
                    android:onClick="@{viewmodel::changePicker}"
                    android:layout_marginEnd="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:id="@+id/mars"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_widget_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/sol_date"
                    android:textColor="@android:color/white"/>

        </RadioGroup>

        <DatePicker

                tools:visibility="gone"
                android:visibility="@{viewmodel.showDatePickerLiveData ? View.VISIBLE : View.GONE}"
                android:background="@android:color/white"
                android:theme="@style/DatePicker"
                android:id="@+id/datePicker1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:datePickerMode="calendar"
                android:layout_marginTop="28dp"

                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <RelativeLayout
                android:visibility="@{viewmodel.showDatePickerLiveData ? View.GONE : View.VISIBLE}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="56dp"
                android:layout_marginEnd="56dp"
                app:layout_constraintEnd_toEndOf="parent">

            <TextView
                    android:layout_marginBottom="12dp"
                    android:id="@+id/textView4"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:gravity="center_horizontal"
                    android:text="@string/sol_explanation_message"/>

            <TextView
                    android:layout_marginTop="18dp"
                    android:textColor="@android:color/white"
                    android:layout_below="@id/textView4"
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sol_"/>

            <SeekBar
                    android:theme="@style/MySeekBar"
                    android:layout_marginTop="18dp"
                    android:layout_below="@id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/textView3"
                    android:layout_toStartOf="@id/edtSol"/>

            <EditText
                    android:hint="0"
                    android:inputType="number"
                    android:layout_below="@id/textView4"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark_red"
                    tools:text="364"
                    android:layout_alignParentEnd="true"
                    android:textColor="@android:color/white"
                    android:id="@+id/edtSol"/>

        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>